<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="buildIt">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <string name="action_settings">Settings</string>
</resources>
