<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="My Nanodegree Apps!"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center" />

    <Button android:id="@+id/spotify"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonColor"
        android:text="@string/spotify"
        android:onClick="spotifyClick"/>

    <Button android:id="@+id/scores"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonColor"
        android:text="@string/scores"
        android:onClick="scoresClick"/>

    <Button android:id="@+id/library"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonColor"
        android:text="@string/library"
        android:onClick="libraryClick"/>

    <Button android:id="@+id/buildit"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonColor"
        android:text="@string/buildIt"
        android:onClick="buildItClick"/>

    <Button android:id="@+id/xyzreader"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonColor"
        android:text="@string/xyzReader"
        android:onClick="xyzClick"/>

    <Button android:id="@+id/capstone"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:background="@color/buttonCapstone"
        android:textColor="@color/buttonCapstoneText"
        android:text="@string/capstone"
        android:onClick="capstoneClick"/>


</LinearLayout>
